# polymarket-bot

./: .gitignore  README.md  flake.nix  pyproject.toml  trade.py
src/polymarket_bot/: __init__.py  client.py  engine.py  events.py  models.py  persistence.py  portfolio.py  runner.py  strategy.py  tui.py
tests/: conftest.py  test_client.py  test_engine.py  test_events.py  test_models.py  test_persistence.py  test_portfolio.py  test_runner.py  test_strategy.py  test_tui.py
